name:    ecu
version: 0.0.7

category: Embedded, Utils

synopsis: Tools for automotive ECU development.

description:
  A collection of tools developed and used by Eaton's
  electro-hydraulic software engineers.  Most of these tools
  are for interacting with vehicle electronic
  control units (ECUs) via a CAN bus.

  This package requires the Kvaser canlib library: http://www.kvaser.com/

author:     Tom Hawkins <tomahawkins@gmail.com>
maintainer: Tom Hawkins <tomahawkins@gmail.com>

license:      BSD3
license-file: LICENSE

build-type:    Simple
cabal-version: >= 1.6

extra-source-files:
    README

executable tovcd
  hs-source-dirs:    src
  main-is:           ToVCD.hs
  build-depends:     base       >= 4.0     && < 5,
                     bytestring >= 0.9.1   && < 0.9.2,
                     vcd        >= 0.2.0   && < 0.3.0
  ghc-options:       -W

executable decomp
  hs-source-dirs:    src
  main-is:           CANViewDecompose.hs
  build-depends:     base       >= 4.0     && < 5,
                     bytestring >= 0.9.1   && < 0.9.2
  ghc-options:       -W

executable cansend
  hs-source-dirs:    src
  main-is:           CANSend.hs
  c-sources:         src/kvaser.c
  extra-libraries:   canlib
  build-depends:     base       >= 4.0     && < 5
  ghc-options:       -W
  extensions:        ForeignFunctionInterface

executable canview
  hs-source-dirs:    src
  main-is:           CANView.hs
  c-sources:         src/kvaser.c
  extra-libraries:   canlib
  build-depends:     base       >= 4.0     && < 5
  ghc-options:       -W
  extensions:        ForeignFunctionInterface

executable ccp
  hs-source-dirs:    src
  main-is:           CCP.hs
  c-sources:         src/kvaser.c
  extra-libraries:   canlib
  build-depends:     base       >= 4.0     && < 5
  ghc-options:       -W
  extensions:        ForeignFunctionInterface, FlexibleInstances

executable probe
  hs-source-dirs:    src
  main-is:           Probe.hs
  c-sources:         src/kvaser.c
  extra-libraries:   canlib
  build-depends:     base       >= 4.0     && < 5,
                     digest     >= 0.0.0.8 && < 0.0.1,
                     vcd        >= 0.2.0   && < 0.3.0
  ghc-options:       -W
  extensions:        ForeignFunctionInterface

executable toesb
  hs-source-dirs:    src
  main-is:           ToESB.hs
  build-depends:     base       >= 4.0     && < 5,
                     bytestring >= 0.9.1   && < 0.9.2,
                     digest     >= 0.0.0.8 && < 0.0.1
  ghc-options:       -W

executable parsedbc
  hs-source-dirs:    src
  main-is:           CANDBParser.hs
  build-depends:     base       >= 4.0     && < 5
  ghc-options:       -W

executable commit
  hs-source-dirs:    src
  main-is:           Commit.hs
  build-depends:     base       >= 4.0     && < 5
  ghc-options:       -W

executable git2cc
  hs-source-dirs:    src
  main-is:           Git2CC.hs
  build-depends:     base       >= 4.0     && < 5,
                     directory  >= 1.0     && < 1.1,
                     process    >= 1.0.1   && < 1.1
  ghc-options:       -W

source-repository head
    type:     git
    location: git://github.com/tomahawkins/ecu.git

